--- a/styles/styles.css
+++ b/styles/styles.css
@@ -221,7 +221,7 @@ body {
   .intro {
     width: 90%;
     height: 50vh;
-    margin: 2em;
+    margin: 5em 2em 2em 2em;
   }
   .intro__left {
     display: flex;
